--- a/BatchAddingParameters/BatchAddingParameters.csproj
+++ b/BatchAddingParameters/BatchAddingParameters.csproj
@@ -54,14 +54,17 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+    <Reference Include="ZetaLongPaths, Version=1.0.0.40, Culture=neutral, PublicKeyToken=b764f59068f31f38, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZetaLongPaths.1.0.0.40\lib\net452-full\ZetaLongPaths.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandForAddingParameters.cs" />
-    <Compile Include="FormForAddingParameter.cs">
+    <Compile Include="MainCommand.cs" />
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormForAddingParameter.Designer.cs">
-      <DependentUpon>FormForAddingParameter.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="FormForPresentation.cs">
       <SubType>Form</SubType>
@@ -69,16 +72,20 @@
     <Compile Include="FormForPresentation.Designer.cs">
       <DependentUpon>FormForPresentation.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormWPF.xaml.cs">
-      <DependentUpon>FormWPF.xaml</DependentUpon>
+    <Compile Include="WindowMain.xaml.cs">
+      <DependentUpon>WindowMain.xaml</DependentUpon>
     </Compile>
     <Compile Include="GroupOfParametersFromFOP.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="ParameterFromFOP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WindowHelp.xaml.cs">
+      <DependentUpon>WindowHelp.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="BatchAddingParameters.addin" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="res\bap-icon.png">
@@ -96,15 +103,19 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="FormForAddingParameter.resx">
-      <DependentUpon>FormForAddingParameter.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormForPresentation.resx">
       <DependentUpon>FormForPresentation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="FormWPF.xaml">
+    <Page Include="WindowMain.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WindowHelp.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
