--- a/BatchAddingParameters/BatchAddingParameters.csproj
+++ b/BatchAddingParameters/BatchAddingParameters.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -73,6 +75,15 @@
     <Compile Include="FormForPresentation.Designer.cs">
       <DependentUpon>FormForPresentation.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModelParameter.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelParameter.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="ParameterProperties.cs" />
+    <Compile Include="WindowAddParameterToList.xaml.cs">
+      <DependentUpon>WindowAddParameterToList.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WindowMain.xaml.cs">
       <DependentUpon>WindowMain.xaml</DependentUpon>
     </Compile>
@@ -85,7 +96,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config" />
     <None Include="BatchAddingParameters.addin" />
+    <EntityDeploy Include="ModelParameter.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ModelParameter.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="ModelParameter.edmx.diagram">
+      <DependentUpon>ModelParameter.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -109,6 +128,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="WindowAddParameterToList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="WindowMain.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
