--- a/BatchAddingParameters/packages.config
+++ b/BatchAddingParameters/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="RevitTask" version="3.0.0" targetFramework="net48" />
   <package id="ZetaLongPaths" version="1.0.0.40" targetFramework="net48" />
 </packages>
